Resolve some deprecations (#3076)